[metadata]
name = my-package
version = 0.1.0
author = Your Name
author_email = your.email@example.com
description = A short description
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
python_requires = >=3.6
install_requires =
    requests>=2.25.0
    numpy>=1.19.0

[options.extras_require]
dev = 
    pytest
    black
    flake8

[options.entry_points]
console_scripts =
    my-tool = mypackage.cli:main